--- a/WebFormsUI/AnaEkran.Master
+++ b/WebFormsUI/AnaEkran.Master
@@ -12,10 +12,10 @@
 <body>
     <header>
         <ul id="menu">
-            <li><a href="#">Kategori Yönetimi</a></li>
+            <li><a href="CategoryManagement.aspx">Kategori Yönetimi</a></li>
             <li><a href="CustomerManagement.aspx">Müşteri Yönetimi</a></li>
             <li><a href="AddressManagement.aspx">Adres Yönetimi</a></li>
-            <li><a href="#">Ürün Yönetimi</a></li>
+            <li><a href="ProductManagement.aspx">Ürün Yönetimi</a></li>
             <li><a href="#">Kullanıcı Yönetimi</a></li>
         </ul>
     </header>
