--- a/WebFormsUI/AnaEkran.Master
+++ b/WebFormsUI/AnaEkran.Master
@@ -10,16 +10,25 @@
     </asp:ContentPlaceHolder>
 </head>
 <body>
-    <header>
-        <ul id="menu">
-            <li><a href="CategoryManagement.aspx">Kategori Yönetimi</a></li>
-            <li><a href="CustomerManagement.aspx">Müşteri Yönetimi</a></li>
-            <li><a href="AddressManagement.aspx">Adres Yönetimi</a></li>
-            <li><a href="ProductManagement.aspx">Ürün Yönetimi</a></li>
-            <li><a href="UserManagement.aspx">Kullanıcı Yönetimi</a></li>
-        </ul>
-    </header>
+
     <form id="form1" runat="server">
+        <header>
+            <ul id="menu">
+                <li><a href="./CategoryManagement.aspx">Kategori Yönetimi</a></li>
+                <li><a href="./CustomerManagement.aspx">Müşteri Yönetimi</a></li>
+                <li><a href="./AddressManagement.aspx">Adres Yönetimi</a></li>
+                <li><a href="./ProductManagement.aspx">Ürün Yönetimi</a></li>
+                <li><a href="./UserManagement.aspx">Kullanıcı Yönetimi</a></li>
+            </ul>
+            <ul>
+                <li>
+                    <asp:Label ID="lblKullanici" runat="server"></asp:Label>
+                </li>
+                <li>
+                    <asp:Button ID="btnCikis" runat="server" Text="Çıkış" BackColor="Red" ForeColor="White" OnClick="btnCikis_Click" ValidationGroup="cikis" />
+                </li>
+            </ul>
+        </header>
         <div>
             <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
             </asp:ContentPlaceHolder>
