30-04-2022 Adres controller dayız

--- a/MVCUI/Areas/Admin/Views/Addresses/Index.cshtml
+++ b/MVCUI/Areas/Admin/Views/Addresses/Index.cshtml
@@ -36,9 +36,9 @@
                 @Html.DisplayFor(modelItem => item.CreateDate)
             </td>
             <td>
-                @Html.ActionLink("Düzenle", "Edit", new { /* id=item.PrimaryKey */ }) |
+                @Html.ActionLink("Düzenle", "Edit", new { id = item.Id }) |
                 
-                @Html.ActionLink("Sil", "Delete", new { /* id=item.PrimaryKey */ })
+                @Html.ActionLink("Sil", "Delete", new { id = item.Id })
             </td>
         </tr>
     }
