--- a/MVCUI/Areas/Admin/Views/Addresses/Edit.cshtml
+++ b/MVCUI/Areas/Admin/Views/Addresses/Edit.cshtml
@@ -1,7 +1,7 @@
 ﻿@model Entities.Address
 
 @{
-    ViewBag.Title = "Yeni Ekle";
+    ViewBag.Title = "Düzenle";
 }
 
 @using (Html.BeginForm())
@@ -9,9 +9,10 @@
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Yeni Adres Ekle</h4>
+        <h4>Adres Düzenle</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
         <div class="form-group">
             @Html.LabelFor(model => model.CustomerId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -19,6 +20,7 @@
                 @Html.ValidationMessageFor(model => model.CustomerId, "", new { @class = "text-danger" })
             </div>
         </div>
+
         <div class="form-group">
             @Html.LabelFor(model => model.Title, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -26,6 +28,7 @@
                 @Html.ValidationMessageFor(model => model.Title, "", new { @class = "text-danger" })
             </div>
         </div>
+
         <div class="form-group">
             @Html.LabelFor(model => model.OpenAddress, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -35,8 +38,16 @@
         </div>
 
         <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Ekle" class="btn btn-primary" />
+            @Html.LabelFor(model => model.CreateDate, htmlAttributes: new { @class = "control-label col-md-2" })
+            <div class="col-md-10">
+                @Html.DisplayFor(model => model.CreateDate)
+                @Html.HiddenFor(model => model.CreateDate)
+            </div>
+        </div>
+
+        <div class="form-group">
+            <div class="col-md-offset-2 col-md-10 mt-3">
+                <input type="submit" value="Kaydet" class="btn btn-success" />
             </div>
         </div>
     </div>
