--- a/MVCUI/Areas/Admin/Views/Customers/Index.cshtml
+++ b/MVCUI/Areas/Admin/Views/Customers/Index.cshtml
@@ -23,6 +23,9 @@
         <th>
             @Html.DisplayNameFor(model => model.Phone)
         </th>
+        <th>
+            @Html.DisplayNameFor(model => model.CreateDate)
+        </th>
         <th></th>
     </tr>
 
@@ -40,6 +43,9 @@
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.Phone)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.CreateDate)
             </td>
             <td>
                 @Html.ActionLink("Düzenle", "Edit", new { id = item.Id }) |
