--- a/MVCUI/Areas/Admin/Views/Addresses/Index.cshtml
+++ b/MVCUI/Areas/Admin/Views/Addresses/Index.cshtml
@@ -9,8 +9,11 @@
 <p>
     @Html.ActionLink("Yeni Ekle", "Create")
 </p>
-<table class="table">
+<table class="table table-striped table-hover">
     <tr>
+        <th>
+            Müşteri
+        </th>
         <th>
             @Html.DisplayNameFor(model => model.Title)
         </th>
@@ -27,6 +30,9 @@
     {
         <tr>
             <td>
+                @item.Customer.Name @item.Customer.SurName
+            </td>
+            <td>
                 @Html.DisplayFor(modelItem => item.Title)
             </td>
             <td>
@@ -37,7 +43,7 @@
             </td>
             <td>
                 @Html.ActionLink("Düzenle", "Edit", new { id = item.Id }) |
-                
+
                 @Html.ActionLink("Sil", "Delete", new { id = item.Id })
             </td>
         </tr>
