--- a/MVCUI/Areas/Admin/Views/Addresses/Edit.cshtml
+++ b/MVCUI/Areas/Admin/Views/Addresses/Edit.cshtml
@@ -16,7 +16,7 @@
         <div class="form-group">
             @Html.LabelFor(model => model.CustomerId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.DropDownList("CustomerId", null, "Müşteri Seçiniz", new { @class = "form-control" })
+                @Html.DropDownList("CustomerId", null, new { @class = "form-control" })
                 @Html.ValidationMessageFor(model => model.CustomerId, "", new { @class = "text-danger" })
             </div>
         </div>
