--- a/MVCUI/Areas/Admin/Views/Products/Index.cshtml
+++ b/MVCUI/Areas/Admin/Views/Products/Index.cshtml
@@ -1,10 +1,10 @@
-﻿@model IEnumerable<Entities.Address>
+﻿@model IEnumerable<Entities.Product>
 
 @{
-    ViewBag.Title = "Adresler";
+    ViewBag.Title = "Ürünler";
 }
 
-<h2>Adresler</h2>
+<h2>Ürünler</h2>
 
 <p>
     @Html.ActionLink("Yeni Ekle", "Create", null, new { @class = "btn btn-outline-primary" })
@@ -12,16 +12,19 @@
 <table class="table table-striped table-hover">
     <tr>
         <th>
-            Müşteri
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.Title)
-        </th>
-        <th>
-            @Html.DisplayNameFor(model => model.OpenAddress)
+            @Html.DisplayNameFor(model => model.Name)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.CreateDate)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.IsActive)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Price)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.Image)
         </th>
         <th></th>
     </tr>
@@ -30,16 +33,19 @@
     {
         <tr>
             <td>
-                @item.Customer.Name @item.Customer.SurName
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.Title)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.OpenAddress)
+                @Html.DisplayFor(modelItem => item.Name)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.CreateDate)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.IsActive)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Price)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.Image)
             </td>
             <td>
                 @Html.ActionLink("Düzenle", "Edit", new { id = item.Id }, new { @class = "btn btn-primary btn-sm" }) |
