--- a/MVCUI/Areas/Admin/Views/Products/Edit.cshtml
+++ b/MVCUI/Areas/Admin/Views/Products/Edit.cshtml
@@ -1,20 +1,19 @@
 ﻿@model Entities.Product
 
 @{
-    ViewBag.Title = "Yeni Ekle";
+    ViewBag.Title = "Düzenle";
 }
 
-<h2>Yeni Ekle</h2>
+<h2>Ürün Düzenle</h2>
 
-@using (Html.BeginForm("Create", "Products", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm("Edit", "Products", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
 
     <div class="form-horizontal">
-        <h4>Ürün Bilgileri</h4>
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-
+        @Html.HiddenFor(model => model.CreateDate)
         <div class="form-group">
             @Html.LabelFor(model => model.CategoryId, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
@@ -60,14 +59,20 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @class = "form-control", type = "file" }})
+                @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @class = "form-control", type = "file" } })
+                @if (Model.Image != null & !string.IsNullOrWhiteSpace(Model.Image))
+                {
+                    <img src="~/Images/@Model.Image" height="70" title="@Model.Image" />
+                    @Html.HiddenFor(model => model.Image)
+                    <span>@Html.CheckBox("cbResmiSil") Resmi Sil</span>
+                }
                 @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
             </div>
         </div>
 
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10 my-3">
-                <input type="submit" value="Ekle" class="btn btn-primary" />
+                <input type="submit" value="Kaydet" class="btn btn-success" />
             </div>
         </div>
     </div>
