--- a/MVCUI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/MVCUI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -36,6 +36,7 @@
                     <input class="form-control me-2" type="search" placeholder="Ara" aria-label="Search">
                     <button class="btn btn-outline-success" type="submit">Ara</button>
                 </form>
+                <a href="/Admin/Login/Logout" class="btn btn-danger ms-3">Çıkış</a>
             </div>
         </div>
     </nav>
