--- a/MVCUI/Views/Shared/_Layout.cshtml
+++ b/MVCUI/Views/Shared/_Layout.cshtml
@@ -27,10 +27,7 @@
                             Ürünlerimiz
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                            <li><a class="dropdown-item" href="#">Kategori</a></li>
-                            <li><a class="dropdown-item" href="#">Kategori</a></li>
-                            <li><hr class="dropdown-divider"></li>
-                            <li><a class="dropdown-item" href="#">Kategori</a></li>
+                            @Html.Action("_PartialMenu", "Home")
                         </ul>
                     </li>
                     <li class="nav-item">
