--- a/MVCUI/Views/Shared/_Layout.cshtml
+++ b/MVCUI/Views/Shared/_Layout.cshtml
@@ -10,28 +10,31 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
-            <a class="navbar-brand" href="#">Logo</a>
+            <a class="navbar-brand" href="/">
+                <img src="~/Images/logo-ikon.png" height="60" />
+            </a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
             </button>
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
                 <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="#">Anasayfa</a>
+                        <a class="nav-link active" aria-current="page" href="/">Anasayfa</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="#">Hakkımızda</a>
-                    </li>
+                    
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                             Ürünlerimiz
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                            <li class="nav-item">
+                                <a class="nav-link" href="/Products">Tümünü Gör</a>
+                            </li>
                             @Html.Action("_PartialMenu", "Home")
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled">İletişim</a>
+                        <a href="/Home/Contact" class="nav-link">İletişim</a>
                     </li>
                 </ul>
                 <form class="d-flex">
