--- a/MVCUI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/MVCUI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -31,11 +31,11 @@
                     <li class="nav-item">
                         <a class="nav-link" href="/Admin/Users">Kullanıcı Yönetimi</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/Admin/Contacts">İletişim Talepleri</a>
+                    </li>
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Ara" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Ara</button>
-                </form>
+                
                 <a href="/Admin/Login/Logout" class="btn btn-danger ms-3">Çıkış</a>
             </div>
         </div>
