--- a/MVCUI/Views/Shared/_Layout.cshtml
+++ b/MVCUI/Views/Shared/_Layout.cshtml
@@ -34,12 +34,12 @@
                         </ul>
                     </li>
                     <li class="nav-item">
-                        <a href="/Home/Contact" class="nav-link">İletişim</a>
+                        <a href="/iletisim" class="nav-link">İletişim</a>
                     </li>
                 </ul>
-                <form class="d-flex">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
+                <form class="d-flex" action="/Search">
+                    <input class="form-control me-2" name="search" type="search" placeholder="Ara" aria-label="Search">
+                    <button class="btn btn-outline-success" type="submit">Ara</button>
                 </form>
             </div>
         </div>
@@ -49,7 +49,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p>&copy; @DateTime.Now.Year - Sipariş Alma Programı</p>
         </footer>
     </div>
 
