--- a/MVCUI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/MVCUI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -20,6 +20,9 @@
                         <a class="nav-link active" aria-current="page" href="/Admin/Categories">Kategori Yönetimi</a>
                     </li>
                     <li class="nav-item">
+                        <a class="nav-link" href="/Admin/Sliders">Slider Yönetimi</a>
+                    </li>
+                    <li class="nav-item">
                         <a class="nav-link" href="/Admin/Customers">Müşteri Yönetimi</a>
                     </li>
                     <li class="nav-item">
