--- a/MVCUI/Areas/Admin/Views/Sliders/Index.cshtml
+++ b/MVCUI/Areas/Admin/Views/Sliders/Index.cshtml
@@ -39,7 +39,7 @@
                 @Html.DisplayFor(modelItem => item.Link)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Image)
+                <img src="~/Images/@item.Image" height="50" />
             </td>
             <td>
                 @Html.ActionLink("Düzenle", "Edit", new { id = item.Id }, new { @class = "btn btn-primary btn-sm" }) |
