21-05-2022 Proje Mvc Katmanı Tamamlandı

--- a/MVCUI/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/MVCUI/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -38,7 +38,7 @@
                         <a class="nav-link" href="/Admin/Contacts">İletişim Talepleri</a>
                     </li>
                 </ul>
-                
+                <a href="/" target="_blank" class="btn btn-info ms-3">Siteyi Gör</a>
                 <a href="/Admin/Login/Logout" class="btn btn-danger ms-3">Çıkış</a>
             </div>
         </div>
