--- a/MVCUI/Areas/Admin/Views/Sliders/Edit.cshtml
+++ b/MVCUI/Areas/Admin/Views/Sliders/Edit.cshtml
@@ -6,7 +6,7 @@
 
 <h2>Slider Düzenle</h2>
 
-@using (Html.BeginForm())
+@using (Html.BeginForm("Edit", "Sliders", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
     @Html.AntiForgeryToken()
     
@@ -40,7 +40,12 @@
         <div class="form-group">
             @Html.LabelFor(model => model.Image, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.EditorFor(model => model.Image, new { htmlAttributes = new { @class = "form-control", type = "file" } })
+                @if (Model.Image != null & !string.IsNullOrWhiteSpace(Model.Image))
+                {
+                    <img src="~/Images/@Model.Image" height="70" title="@Model.Image" />
+                    @Html.HiddenFor(model => model.Image)
+                }
                 @Html.ValidationMessageFor(model => model.Image, "", new { @class = "text-danger" })
             </div>
         </div>
