--- a/MVCUI/Views/Home/Index.cshtml
+++ b/MVCUI/Views/Home/Index.cshtml
@@ -1,8 +1,10 @@
-﻿@model IEnumerable<Entities.Product>
+﻿@model MVCUI.Models.HomePageViewModel
 
 @{
     ViewBag.Title = "Anasayfa";
 }
+
+@Html.Partial("_PartialSlider", Model.Sliders)
 
 <div class="jumbotron text-center">
     <h1>Ürünlerimiz</h1>
@@ -13,21 +15,9 @@
 
         <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
 
-            @foreach (var item in Model)
+            @foreach (var item in Model.Products)
             {
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <a href="/Products/Detail/@item.Id">
-                            <img src="~/Images/@item.Image" class="bd-placeholder-img card-img-top" width="100%" />
-
-                            <div class="card-body">
-                                <p class="card-text">
-                                    @item.Name
-                                </p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
+                @Html.Partial("_PartialProduct", item)
             }
 
         </div>
