--- a/MVCUI/Views/Home/Search.cshtml
+++ b/MVCUI/Views/Home/Search.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@model IEnumerable<Entities.Product>
+
 @{
     ViewBag.Title = "Arama Sonuçları";
 }
@@ -14,21 +15,8 @@
 
             @foreach (var item in Model)
             {
-                <div class="col">
-                    <div class="card shadow-sm">
-                        <a href="/Products/Detail/@item.Id">
-                            <img src="~/Images/@item.Image" class="bd-placeholder-img card-img-top" width="100%" />
-
-                            <div class="card-body">
-                                <p class="card-text">
-                                    @item.Name
-                                </p>
-                            </div>
-                        </a>
-                    </div>
-                </div>
+                @Html.Partial("_PartialProduct", item)
             }
-
 
         </div>
     </div>
